--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NetworkUrl": "https://ropsten.infura.io/",
+  "WorkingDirectory": "Wallets\\"
 }
