--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "NetworkUrl": "https://ropsten.infura.io/",
+  "NetworkUrl": "https://speedy-nodes-nyc.moralis.io/eb63293a99848b4412fedb17/eth/ropsten",
   "WorkingDirectory": "Wallets\\"
 }
